# Netpix

./: .gitignore  README.md  Shooter.sln
Shooter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DialogueManager.cpp  DialogueManager.h  Netpix.sln  Netpix.vcxproj  Netpix.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  Shooter.vcxproj  Shooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Shooter/src/: Animation.h  Camera.cpp  Camera.h  DialogueManager.cpp  DialogueManager.h  GameObjects.h  NewScene.cpp  NewScene.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Scene.h  ScreenManager.cpp  ScreenManager.h  States.h  main.cpp
Shooter/src/Animation/: Animation.cpp  Animation.h  Transitions.cpp  Transitions.h
Shooter/src/Core/: Camera.cpp  Camera.h  ScreenManager.cpp  ScreenManager.h  States.h
Shooter/src/Game/: GameObjects.cpp  GameObjects.h  InventorySystem.cpp  InventorySystem.h  Pathfinding.cpp  Pathfinding.h  Player.cpp  Player.h  PlayerStats.h
Shooter/src/Pathfinding/: NavigationGraph.h
Shooter/src/Scene/: ParallaxScene.h  Scene.h  SceneManager.cpp  SceneManager.h
Shooter/src/Scene/Scene Components/: Background.cpp  Foreground.cpp  MainMenu.cpp  Midground.cpp  Scene.cpp  SceneBuilder.cpp  SceneComponent.cpp
Shooter/src/Scene/temp/: ParallaxScene.h
Shooter/src/Sound/: Music.cpp  Music.h
Shooter/src/UI/: Button.cpp  Button.h  GUI.cpp  GUI.h
Shooter/x64/Debug/: Shooter.exe.recipe  Shooter.ilk  Shooter.vcxproj.FileListAbsolute.txt  vc143.idb
Shooter/x64/Debug/Shooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Shooter.lastbuildstate  Shooter.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
